--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/styleForm.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/styleForm.css
@@ -1,13 +1,8 @@
  body{
   line-height: 2;
  }
- .button-send{
-border-radius: 4px;
-width: 20%;
-height: 30px;
- }
 
- .button-clear{
+ .button{
 border-radius: 4px;
 width: 20%;
 height: 30px;
@@ -17,4 +12,12 @@ height: 30px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: small;
+ }
+
+ .name{
+  width: 500px;
+ }
+
+ .email{
+  width: 450px;
  }
