--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style-pratic-exercise.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style-pratic-exercise.css
@@ -74,8 +74,8 @@ body {
   height: 150px;
   justify-content: center;
   margin: 10px;
-  flex-basis: 16%;
-}
+  flex: 1 16%;
+ }
 
 .aside-container {
   display: flex;
